syntax = "proto3";
package soarchain.epoch;
import "epoch/epoch_data.proto";
import "epoch/random_data.proto";
import "gogoproto/gogo.proto";
import "epoch/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/soar-robotics/soarchain-core/x/epoch/types";

// GenesisState defines the epoch module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  EpochData epochData = 8 [(gogoproto.nullable) = false];
  RandomData randomData = 2 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
